Bug 1888449 - Ensure that attempting to balance lines doesn't alter the block-size of the result. r=layout-reviewers,emilio

Differential Revision: https://phabricator.services.mozilla.com/D206680